feat: Rename package from `@machine-web/mcp` to `machine-web-mcp` and add repository, homepage, and bugs URLs.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "@machine-web/mcp",
+  "name": "machine-web-mcp",
   "version": "0.1.0",
   "description": "Expose machine-consumable web endpoints for AI agents.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/somratpro/machine-web.git"
+  },
+  "homepage": "https://github.com/somratpro/machine-web#readme",
+  "bugs": {
+    "url": "https://github.com/somratpro/machine-web/issues"
   },
   "type": "commonjs",
   "main": "dist/index.js",
